#189 review changes